更改了学校管理后台用户展示，首页学校入驻图片上传部分功能

--- a/htdocs/src/Topxia/WebBundle/Resources/views/Default/index.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Default/index.html.twig
@@ -21,19 +21,19 @@
       <div class="swiper-wrapper">
           <div class="swiper-slide swiper-hidden" style="background: #46c47b;">
             <div >
-              <a href="http://www.baidu.com" target="_blank" ><img class="img-responsive" src="../files/{{ imgsOne.src }}">
+              <a href="http://www.baidu.com" target="_blank" ><img class="img-responsive" src="../files/{{ logo }}">
               </a>
             </div>
           </div>
           <div class="swiper-slide swiper-hidden" style="background: #109afb;">
             <div >
-              <a href="http://www.baidu.com" target="_blank" ><img class="img-responsive" src="../files/{{ imgsOne.src }}">
+              <a href="http://www.baidu.com" target="_blank" ><img class="img-responsive" src="../files/{{ logo }}">
               </a>
             </div>
           </div>
         <div class="swiper-slide swiper-hidden" style="background: #109afb;">
             <div >
-              <a href="http://www.baidu.com" target="_blank" ><img class="img-responsive" src="../files/{{ imgsOne.src }}">
+              <a href="http://www.baidu.com" target="_blank" ><img class="img-responsive" src="../files/{{ logo }}">
               </a>
             </div>
           </div>
