--- a/htdocs/src/Topxia/WebBundle/Resources/views/SchoolAuth/add-schoolAuth.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/SchoolAuth/add-schoolAuth.html.twig
@@ -16,6 +16,16 @@
 </div>
 {{ web_macro.flash_messages() }}
 
+{#LOGO#}
+<div class="form-group">
+    <label class="col-md-2 control-label">{{'LOGO'|trans}}</label>
+    <div class="col-md-7 controls radios">
+        {#<a href="#modal" data-toggle="modal" data-url="{{path('school_uploadSch', {id: user.id})}}" class="btn btn-default btn-sm">查看</a>#}
+        <a href="#modal" data-toggle="modal" data-url="{{ path('school_uploadSch', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
 {% if flag == 1 %}
 
 {#民办非企业登记证书#}
@@ -23,7 +33,7 @@
     <label class="col-md-2 control-label">{{'民办非企业登记证书'|trans}}</label>
     <div class="col-md-7 controls radios">
         {#<a href="#modal" data-toggle="modal" data-url="{{path('newadmin_school_uploadCer', {id: user.id})}}" class="btn btn-default btn-sm">查看</a>#}
-        <a href="" data-toggle="modal" data-url="{{ path('newadmin_school_uploadCer', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('school_uploadCer', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -32,7 +42,7 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'办学许可证'|trans}}</label>
     <div class="col-md-7 controls">
-         <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadLis', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+         <a href="#modal" data-toggle="modal" data-url="{{ path('school_uploadLis', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -41,7 +51,7 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'收费许可证或收费项目公示'|trans}}</label>
     <div class="col-md-7 controls">
-        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadPer', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('school_uploadPer', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -50,7 +60,7 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'年检合格证'|trans}}</label>
     <div class="col-md-7 controls">
-        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadAnn', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('school_uploadAnn', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -59,7 +69,7 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'招生计划审批表'|trans}}</label>
     <div class="col-md-7 controls">
-        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadApp', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('school_uploadApp', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -68,7 +78,7 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'特种专业开办许可证'|trans}}</label>
     <div class="col-md-7 controls">
-        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadApp', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('school_uploadSpe', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -79,7 +89,7 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'营业执照'|trans}}</label>
     <div class="col-md-7 controls">
-        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadBus', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('school_uploadBus', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -95,5 +105,5 @@
 <input type="hidden" id="schoolAuth_type" name="schoolAuth[type]" value="{{ schoolAuth.type|default(0) }}">
 <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
 </form>
-
+<div id="modal" class="modal" ></div>
 {% endblock %} {% endblock %}
