后台管理员查看学校上传图片授权功能

--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/schoolshow.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/schoolshow.html.twig
@@ -31,12 +31,12 @@
     </td>
   </tr>
 
-  <tr>
-    <th>{{'学校成立时间'|trans}}/IP</th>
+  {#<tr>
+    <th>{{'学校成立时间'|trans}}</th>
     <td>
       {{ school.startTime|date('Y-m-d ') }}
     </td>
-  </tr>
+  </tr>#}
 
   <tr>
     <th>{{'学校地址'|trans}}</th>
