--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/showSchoolAuthCrop.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/showSchoolAuthCrop.html.twig
@@ -2,15 +2,19 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      <h4 class="modal-title">{{'学校图片预览'|trans}}</h4>
+      <h4 class="modal-title">{{'图片预览'|trans}}</h4>
     </div>
     <div class="modal-body">
 
-      <form id="schoolSch-crop-form" method="post" action="{{ path('newadmin_school_uploadSch_crop', {id: school_id}) }}" >
+      {#<form id="schoolSch-crop-form" method="post" action="{{ path('newadmin_school_uploadSch_crop', {id: school_id}) }}" >#}
        
-        <div class="form-group clearfix">
+        <div class="form-group clearfix" width="1024" height="768">
           <div class="col-md-offset-2 col-md-8 controls">
-            <img class="img-responsive" src="{{ filepath(pictureUrl) }}" id="avatar-crop" width="{{scaledSize.width}}" height="{{scaledSize.height}}" data-natural-width="{{ naturalSize.width }}" data-natural-height="{{ naturalSize.height }}" />
+            {% if pictureUrl %}
+            <img class="img-responsive" src="{{ filepath(pictureUrl) }}" id="avatar-crop" width="1024px" height="768px" data-natural-width="1024px" data-natural-height="768px" />
+            {% else %}
+            <img class="img-responsive" src="" id="avatar-crop" width="1024px" height="768px" data-natural-width="1024px" data-natural-height="768px" />
+            {% endif %}
             {#<div class="help-block">{{'提示：请选择图片裁剪区域。'|trans}}</div>#}
           </div>
         </div>
@@ -25,9 +29,9 @@
           </div>
         </div>#}
 
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
+        {#<input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">#}
         
-      </form>
+      {#</form>#}
 
     </div>
     <div class="modal-footer">  <button type="button" class="btn btn-link pull-right" data-dismiss="modal">{{'关闭'|trans}}</button>
