--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/student/enroll.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/student/enroll.html.twig
@@ -14,11 +14,13 @@
 <table id="student-enrollstat-table" class="table table-striped table-hover" data-search-form="#school-searchSt-form">
   <thead>
     <tr>
-      <th>{{'姓名'|trans}}</th>
+      <th>{{'学生姓名'|trans}}</th>
       <th>{{'联系方式'|trans}}</th>
       <th>{{'身份证号'|trans}}</th>
       <th>{{'所报课程'|trans}}</th>
+      <th>{{'课程费用'|trans}}</th>
       <th>{{'报名时间'|trans}}</th>
+      <th>{{'操作'|trans}}</th>
     </tr>
   </thead>
   <tbody>
@@ -28,8 +30,11 @@
           <td>{{ student.name|default('') }}</td>
           <td>{{ student.phone|default('') }}</td>
           <td>{{ student.IDcards|default('') }}</td>
-          <td>{{ student.reportedCourse|default('') }}</td>
+          <td>{{ student.course|default('') }}</td>
+          <td>{{ student.price|default('') }}</td>
           <td>{{ student.createTime is empty ? "" : student.createTime|date("Y-m-d ") }}</td>
+          <td><a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_student_show', {id:student.id}) }}" class="btn btn-default btn-sm">查看</a></td>
+          <td><a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_report', {id:student.id}) }}" class="btn btn-default btn-sm">确认报道</a></td>
         </tr>
       {% endfor %}
     {% endif %}
