--- a/htdocs/src/Topxia/WebBundle/Resources/views/Student/winxin_toper.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Student/winxin_toper.html.twig
@@ -10,6 +10,8 @@
 	<link type="text/css" rel="stylesheet" href="/../winxin/template/default/statics/css/haidao.css?v={HD_VERSION}" />
 	<link type="text/css" rel="stylesheet" href="/../winxin/template/default/statics/css/public.css?v={HD_VERSION}" />
 	<script type="text/javascript" src="/../winxin/template/default/statics/js/jquery-1.7.2.min.js?v={HD_VERSION}"></script>
+	{#<script type="text/javascript" src="/../winxin/statics/js/jquery.min.js?"></script>#}
+	<script type="text/javascript" src="/../winxin/statics/js/jquery.qrcode.min.js?"></script>
 	<script type="text/javascript" src="/../winxin/template/default/statics/js/haidao.web.general.js?v={HD_VERSION}"></script>
 	<script type="text/javascript" src="/../winxin/template/default/statics/js/common.js?v={HD_VERSION}"></script>
 	<script type="text/javascript" src="/../winxin/statics/js/dialog/dialog-plus-min.js?v={HD_VERSION}"></script>
